fix: horizontal scroll and border-radius

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -46,16 +46,15 @@
 
     &::-webkit-scrollbar {
       width: 10px;
+      height: 10px;
     }
 
     &::-webkit-scrollbar-track {
       box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
       background-color: #f9f9fd;
-      border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
       background: linear-gradient(180deg, #00c6fb, #005bea);
     }
 
